基本完成配置界面

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <label class="custom-control-label" for="BLDFShowOtherDanmaku">显示不匹配正则表达式的其他弹幕</label>
             </div>
             <button class="btn btn-primary" id="BLDFSettingsSave" disabled>保存设置</button>
-            <a class="btn btn-primary" href="Bilibili%20Live%20Danmaku%20Filter.user.js">安装</a>
+            <a class="btn btn-primary" href="https://greasyfork.org/zh-CN/scripts/386759-bilibili-live-danmaku-filter">安装</a>
         </form>
 
 
