--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="custom-control custom-checkbox form-group">
                 <input type="checkbox" class="custom-control-input" id="BLDFNeedSubBody" disabled>
-                <label class="custom-control-label" for="BLDFNeedSubBody">开启字幕框</label>
+                <label class="custom-control-label" for="BLDFNeedSubBody">开启字幕框（需刷新页面）</label>
             </div>
             <div class="custom-control custom-checkbox form-group">
                 <input type="checkbox" class="custom-control-input" id="BLDFShowDanmaku" disabled>
