同传记录功能

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 <input type="checkbox" class="custom-control-input" id="BLDFShowOtherDanmaku" disabled>
                 <label class="custom-control-label" for="BLDFShowOtherDanmaku">显示不匹配正则表达式的其他弹幕</label>
             </div>
+            <div class="custom-control custom-checkbox form-group">
+                <input type="checkbox" class="custom-control-input" id="BLDFRecord" disabled>
+                <label class="custom-control-label" for="BLDFRecord">【WIP】记录同传并保存到直播间localStorage->"record"</label>
+            </div>
             <button class="btn btn-primary" id="BLDFSettingsSave" disabled>保存设置</button>
             <a class="btn btn-primary" href="https://greasyfork.org/zh-CN/scripts/386759-bilibili-live-danmaku-filter">安装</a>
 
